# napari-assistant-plugin-generator

./: LICENSE  README.md  requirements.txt  setup.cfg
napari_assistant_plugin_generator/: __init__.py  _plugin_generator.py
