# setup.cfg
[metadata]
name = napari-assistant-plugin-generator
version = 0.1.0
author = Robert Haase
author_email = robert.haase@tu-dresden.de
description = Auto-generate python code from within napari to make napari-assistant compatible plugins
url = https://github.com/haesleinhuepf/napari-assistant-plugin-generator/
license = BSD-3-Clause

project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-assistant-plugin-generator/issues
    Documentation = https://github.com/haesleinhuepf/napari-assistant-plugin-generator/
    Source Code = https://github.com/haesleinhuepf/napari-assistant-plugin-generator
    User Support = https://forum.image.sc/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Framework :: napari
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    napari-plugin-engine>=0.1.4
    magicgui
    numpy!=1.19.4
    jupytext
    jupyter
    dask
    autopep8
    cookiecutter
    napari-tools-menu


[options.entry_points]
napari.plugin =
    napari-assistant-plugin-generator = napari_assistant_plugin_generator._napari_plugin


